--- a/src/scss/abstracts/_bs-custom.scss
+++ b/src/scss/abstracts/_bs-custom.scss
@@ -102,7 +102,7 @@ $colors: map-merge((
 
 
   
-$primary  : #4D44B5 !default;
+$primary  : #212a50 !default;
 $secondary: #FB7D5B !default;
 $success  : #1EBA62 !default;
 $info     : #00ADA3 !default;
