--- a/src/jsx/scss/pages/_homepage.scss
+++ b/src/jsx/scss/pages/_homepage.scss
@@ -753,10 +753,10 @@ tr{
 		background-color:var(--primary);
 	}
 	.teach-data {
-		background-color:var(--secondary);
+		background-color:#f3a024;
 	}
 	.event-data{
-		background-color:#fcc43e;
+		background-color:#f3a024;
 	}
 	.food-data{
 		background-color:#303972;
