--- a/src/scss/abstracts/_bs-custom.scss
+++ b/src/scss/abstracts/_bs-custom.scss
@@ -103,7 +103,7 @@ $colors: map-merge((
 
   
 $primary  : #212a50 !default;
-$secondary: #FB7D5B !default;
+$secondary: #e07051 !default;
 $success  : #1EBA62 !default;
 $info     : #00ADA3 !default;
 $warning  : #FCC43E !default;
