--- a/src/jsx/scss/pages/_user.scss
+++ b/src/jsx/scss/pages/_user.scss
@@ -95,7 +95,7 @@
 .photo-content{
     position: relative;
     .cover-photo{
-        background: url(../images/profile/12.jpg);
+        // background: url(../images/profile/12.jpg);
         background-size: cover;
         background-position: center;
         min-height: 15.625rem;
